<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".view.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="230dp"
            android:contentDescription="@string/todo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_detail" />

        <TableLayout
            android:id="@+id/tb_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_detail">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:minHeight="20dp">

                <TextView
                    android:id="@+id/tv_real_or_air"
                    android:layout_column="1"
                    android:text="@string/txt_release"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_column="2"
                    android:layout_marginStart="5dp"
                    android:text="@string/double_dot"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_realese_detail"
                    android:layout_column="3"
                    android:layout_marginStart="5dp"
                    android:text="@string/release"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_column="4"
                    android:layout_marginStart="100dp"
                    android:text="@string/txt_rating"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_column="5"
                    android:layout_marginStart="5dp"
                    android:text="@string/double_dot"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_rate_detail"
                    android:layout_column="6"
                    android:layout_marginStart="5dp"
                    android:text="@string/rate_value"
                    android:textColor="@color/colorWhite" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="20dp">

                <TextView
                    android:layout_column="1"
                    android:text="@string/txt_original_title"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_column="2"
                    android:layout_marginStart="5dp"
                    android:text="@string/double_dot"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_column="3"
                    android:layout_marginStart="5dp"
                    android:layout_span="3"
                    android:text="@string/txt_original_title"
                    android:textColor="@color/colorWhite" />
            </TableRow>
        </TableLayout>

        <TextView
            android:textSize="15sp"
            android:id="@+id/txt_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_description"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/tb_layout" />

        <TextView
            android:id="@+id/tv_description_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txt_des"
            android:paddingBottom="@dimen/activity_vertical_margin"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>