<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".view.activity.ReminderActivity">


    <Switch
        android:id="@+id/sv_daily_Remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/txt_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_daily_reminder_setting"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sv_release_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/txt_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_daily_reminder_setting"
        app:layout_constraintTop_toTopOf="@id/tv_realese_reminder" />

    <TextView
        android:id="@+id/tv_daily_reminder_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/daily_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_realese_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/release_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_reminder_setting" />


</androidx.constraintlayout.widget.ConstraintLayout>