<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    android:layout_margin="8dp"
    tools:ignore="PrivateResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="72dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:id="@+id/img_photo_card"
            android:layout_marginEnd="7dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/title_card_view"/>


            <TextView
                android:id="@+id/tv_realese_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/release"
                tools:ignore="RtlSymmetry,SmallSp" />

            <TextView
                android:id="@+id/tv_description_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_star_rate_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_yellow_24dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_rate_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>